--- a/src/scss/phy/groups.scss
+++ b/src/scss/phy/groups.scss
@@ -18,6 +18,7 @@
 
 .group-nav-tab {
   font-size: 16px !important;
+  padding-inline: 0.6rem;
 }
 
 .nav-tabs .nav-item {
